Fix carousel layout bug

--- a/src/pages/Home/Hero/Carousel/carousel.css
+++ b/src/pages/Home/Hero/Carousel/carousel.css
@@ -25,10 +25,9 @@
 .text-wrapper,
 .image-wrapper {
   width: 100%;
-  height: 100%;
+  min-height: 350px;
   display: flex;
   flex-direction: column;
-  background-image: url("../../../../assets/images/home/hero/carousel/chicken-bg.svg");
   background-repeat: no-repeat;
   background-size: cover;
 }
